@@ -10,16 +10,21 @@ Feature: Cucumber command line
 
         Scenario: Call directly                                # features/call_undefined_step_from_step_def.feature:3
           Given a step definition that calls an undefined step # features/step_definitions/sample_steps.rb:19
-            Undefined step: "this does not exist" (Cucumber::StepMom::Undefined)
+            Undefined step: "this does not exist" (Cucumber::StepMother::Undefined)
             ./features/step_definitions/sample_steps.rb:20:in `/^a step definition that calls an undefined step$/'
 
         Scenario: Call via another                                         # features/call_undefined_step_from_step_def.feature:6
           Given call step "a step definition that calls an undefined step" # features/step_definitions/sample_steps.rb:23
-            Undefined step: "this does not exist" (Cucumber::StepMom::Undefined)
+            Undefined step: "this does not exist" (Cucumber::StepMother::Undefined)
             ./features/step_definitions/sample_steps.rb:20:in `/^a step definition that calls an undefined step$/'
 
       2 scenarios
       2 steps undefined
+
+      You can implement step definitions for missing steps with these snippets:
+      
+      Given /^this does not exist$/ do
+      end
 
       """
   
